--- a/genindex.html
+++ b/genindex.html
@@ -264,9 +264,7 @@ document.write(`
  | <a href="#D"><strong>D</strong></a>
  | <a href="#E"><strong>E</strong></a>
  | <a href="#F"><strong>F</strong></a>
- | <a href="#H"><strong>H</strong></a>
  | <a href="#I"><strong>I</strong></a>
- | <a href="#J"><strong>J</strong></a>
  | <a href="#K"><strong>K</strong></a>
  | <a href="#M"><strong>M</strong></a>
  | <a href="#N"><strong>N</strong></a>
@@ -277,14 +275,11 @@ document.write(`
  | <a href="#T"><strong>T</strong></a>
  | <a href="#U"><strong>U</strong></a>
  | <a href="#V"><strong>V</strong></a>
- | <a href="#W"><strong>W</strong></a>
  
 </div>
 <h2 id="A">A</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="automol/form.html#automol.form.add_element">add_element() (in module automol.form)</a>
-</li>
       <li><a href="automol/util.html#automol.util.vector.angle">angle() (in module automol.util.vector)</a>
 </li>
       <li><a href="automol/util.html#automol.util.vector.arbitrary_unit_perpendicular">arbitrary_unit_perpendicular() (in module automol.util.vector)</a>
@@ -293,17 +288,6 @@ document.write(`
 </li>
       <li><a href="automol/form.html#automol.form.reac.argsort_hydrogen_abstraction">argsort_hydrogen_abstraction() (in module automol.form.reac)</a>
 </li>
-      <li><a href="automol/form.html#automol.form.argsort_symbols">argsort_symbols() (in module automol.form)</a>
-</li>
-      <li><a href="automol/form.html#automol.form.atom_count">atom_count() (in module automol.form)</a>
-</li>
-      <li>
-    automol.form
-
-      <ul>
-        <li><a href="automol/form.html#module-automol.form">module</a>
-</li>
-      </ul></li>
       <li>
     automol.form.reac
 
@@ -325,8 +309,6 @@ document.write(`
         <li><a href="automol/util.html#module-automol.util">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     automol.util.dict_
 
@@ -334,6 +316,8 @@ document.write(`
         <li><a href="automol/util.html#module-automol.util.dict_">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     automol.util.dict_.multi
 
@@ -448,12 +432,8 @@ document.write(`
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="automol/util.html#automol.util.ring.edges">edges() (in module automol.util.ring)</a>
 </li>
-      <li><a href="automol/form.html#automol.form.electron_count">electron_count() (in module automol.form)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="automol/form.html#automol.form.element_count">element_count() (in module automol.form)</a>
-</li>
       <li><a href="automol/util.html#automol.util.dict_.empty_if_none">empty_if_none() (in module automol.util.dict_)</a>
 </li>
       <li><a href="automol/util.html#automol.util.equivalence_partition">equivalence_partition() (in module automol.util)</a>
@@ -472,29 +452,17 @@ document.write(`
 </li>
       <li><a href="automol/inchi_key.html#automol.inchi_key.first_hash">first_hash() (in module automol.inchi_key)</a>
 </li>
-      <li><a href="automol/util.html#automol.util.flatten">flatten() (in module automol.util)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.flatten">flatten() (in module automol.util)</a>
+</li>
       <li><a href="automol/util.html#automol.util.vector.flip_if_left_handed">flip_if_left_handed() (in module automol.util.vector)</a>
 </li>
       <li><a href="automol/util.html#automol.util.formula_from_symbols">formula_from_symbols() (in module automol.util)</a>
 </li>
       <li><a href="automol/util.html#automol.util.vector.from_internals">from_internals() (in module automol.util.vector)</a>
 </li>
-      <li><a href="automol/form.html#automol.form.from_string">from_string() (in module automol.form)</a>
-
-      <ul>
-        <li><a href="automol/util.html#automol.util.tensor.from_string">(in module automol.util.tensor)</a>
-</li>
-      </ul></li>
-  </ul></td>
-</tr></table>
-
-<h2 id="H">H</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="automol/form.html#automol.form.heavy_atom_count">heavy_atom_count() (in module automol.form)</a>
+      <li><a href="automol/util.html#automol.util.tensor.from_string">from_string() (in module automol.util.tensor)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -519,18 +487,6 @@ document.write(`
   </ul></td>
 </tr></table>
 
-<h2 id="J">J</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="automol/form.html#automol.form.join">join() (in module automol.form)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="automol/form.html#automol.form.join_sequence">join_sequence() (in module automol.form)</a>
-</li>
-  </ul></td>
-</tr></table>
-
 <h2 id="K">K</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -546,16 +502,12 @@ document.write(`
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="automol/form.html#automol.form.match">match() (in module automol.form)</a>
-</li>
       <li><a href="automol/util.html#automol.util.dict_.merge_sequence">merge_sequence() (in module automol.util.dict_)</a>
 </li>
       <li>
     module
 
       <ul>
-        <li><a href="automol/form.html#module-automol.form">automol.form</a>
-</li>
         <li><a href="automol/form.html#module-automol.form.reac">automol.form.reac</a>
 </li>
         <li><a href="automol/inchi_key.html#module-automol.inchi_key">automol.inchi_key</a>
@@ -647,28 +599,18 @@ document.write(`
 </li>
       <li><a href="automol/util.html#automol.util.sort_by_list">sort_by_list() (in module automol.util)</a>
 </li>
-      <li><a href="automol/util.html#automol.util.dict_.sort_value_">sort_value_() (in module automol.util.dict_)</a>
-</li>
-      <li><a href="automol/form.html#automol.form.sort_vector">sort_vector() (in module automol.form)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="automol/form.html#automol.form.sorted_symbols">sorted_symbols() (in module automol.form)</a>
+      <li><a href="automol/util.html#automol.util.dict_.sort_value_">sort_value_() (in module automol.util.dict_)</a>
 </li>
-      <li><a href="automol/form.html#automol.form.sorted_symbols_in_sequence">sorted_symbols_in_sequence() (in module automol.form)</a>
-</li>
-      <li><a href="automol/form.html#automol.form.string">string() (in module automol.form)</a>
+      <li><a href="automol/util.html#automol.util.matrix.string">string() (in module automol.util.matrix)</a>
 
       <ul>
-        <li><a href="automol/util.html#automol.util.matrix.string">(in module automol.util.matrix)</a>
-</li>
         <li><a href="automol/util.html#automol.util.tensor.string">(in module automol.util.tensor)</a>
 </li>
         <li><a href="automol/util.html#automol.util.vector.string">(in module automol.util.vector)</a>
 </li>
       </ul></li>
-      <li><a href="automol/form.html#automol.form.string2">string2() (in module automol.form)</a>
-</li>
       <li><a href="automol/util.html#automol.util.tensor.string_submat_3d">string_submat_3d() (in module automol.util.tensor)</a>
 </li>
       <li><a href="automol/util.html#automol.util.tensor.string_submat_4d">string_submat_4d() (in module automol.util.tensor)</a>
@@ -726,14 +668,6 @@ document.write(`
       <li><a href="automol/util.html#automol.util.dict_.values_sorted_by_key">values_sorted_by_key() (in module automol.util.dict_)</a>
 </li>
       <li><a href="automol/inchi_key.html#automol.inchi_key.version_indicator">version_indicator() (in module automol.inchi_key)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="W">W</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="automol/form.html#automol.form.without">without() (in module automol.form)</a>
 </li>
   </ul></td>
 </tr></table>
